[package]
name = "geotiff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geotiff = "0.0.2"
itertools = "0.12.0"
thiserror = "1.0.50"

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4",
    "fast-rng"
]